--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,19 @@ branches:
   only:
   - master
 image: Visual Studio 2017
-configuration: Debug
+configuration: 
+  - Debug
+  - Release
 platform: Any CPU
 before_build:
-- cmd: nuget restore LiteDB.sln
+  - cmd: nuget restore LiteDB.sln
+after_build:
+  - ps: Compress-Archive -Path "C:\project\litedb\LiteDB\bin\Release\net45\LiteDB.dll", "C:\project\litedb\LiteDB\bin\Release\nectoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "C:\project\litedb\LiteDB\bin\Release\release-${env:APPVEYOR_BUILD_VERSION}.zip"
 build:
   project: LiteDB.sln
   verbosity: minimal
+deploy:
+- provider: Webhook
+  url: https://app.signpath.io/API/v1/b97db90c-7c03-416b-9003-8ed45742da5f/Integrations/AppVeyor?ProjectKey=mbdavid-LiteDB&SigningPolicyKey=test-signing
+  authorization:
+     secure: Yxu2EMTqYCJBmvAS36HyeSvoxlvAuCfB4B2+InT5gLsxe7Mkj/SGP1xFlnSY19Bv
