--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,9 @@ platform: Any CPU
 before_build:
   - cmd: nuget restore LiteDB.sln
 after_build:
-  - ps: Compress-Archive -Path "C:\project\litedb\LiteDB\bin\Release\net45\LiteDB.dll", "C:\project\litedb\LiteDB\bin\Release\nectoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "C:\project\litedb\LiteDB\bin\Release\release-${env:APPVEYOR_BUILD_VERSION}.zip"
+  - ps: Compress-Archive -Path "C:\projects\litedb\LiteDB\bin\Release\net45\LiteDB.dll", "C:\projects\litedb\LiteDB\bin\Release\nectoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "C:\projects\litedb\LiteDB\bin\Release\release-${env:APPVEYOR_BUILD_VERSION}.zip"
+  - only:
+    - configuration: Release
 build:
   project: LiteDB.sln
   verbosity: minimal
@@ -19,3 +21,5 @@ deploy:
   url: https://app.signpath.io/API/v1/b97db90c-7c03-416b-9003-8ed45742da5f/Integrations/AppVeyor?ProjectKey=mbdavid-LiteDB&SigningPolicyKey=test-signing
   authorization:
      secure: Yxu2EMTqYCJBmvAS36HyeSvoxlvAuCfB4B2+InT5gLsxe7Mkj/SGP1xFlnSY19Bv
+  only:
+    - configuration: Release
