--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,9 +18,10 @@ for:
     only:
       - configuration: Release
   after_build:
-    - ps: Compress-Archive -Path "LiteDB\bin\Release\net45\LiteDB.dll", "LiteDB.Shell\bin\Release\nectoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "LiteDB\bin\Release\release-${env:APPVEYOR_BUILD_VERSION}.zip"
+    - ps: Get-ChildItem -Recurse
+    - ps: Compress-Archive -Path "LiteDB\bin\Release\net45\LiteDB.dll", "LiteDB.Shell\bin\Release\netcoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "release-${env:APPVEYOR_BUILD_VERSION}.zip"
   artifacts:
-    - path: LiteDB\bin\Release\*.zip
+    - path: release-*.zip
   deploy:
   - provider: Webhook
     url: https://app.signpath.io/API/v1/b97db90c-7c03-416b-9003-8ed45742da5f/Integrations/AppVeyor?ProjectKey=mbdavid-LiteDB&SigningPolicyKey=test-signing
