--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,10 +17,11 @@ for:
   matrix:
     only:
       - configuration: Release
-  after_build:
-    - ps: Compress-Archive -Path "LiteDB\bin\Release\net45\LiteDB.dll", "LiteDB.Shell\bin\Release\netcoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "release-${env:APPVEYOR_BUILD_VERSION}.zip"
+#  after_build:
+#    - ps: Compress-Archive -Path "LiteDB\bin\Release\net45\LiteDB.dll", "LiteDB.Shell\bin\Release\netcoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "release-${env:APPVEYOR_BUILD_VERSION}.zip"
   artifacts:
-    - path: release-*.zip
+#    - path: release-*.zip
+    - path: LiteDB\bin\Release\net45\LiteDB.dll
   deploy:
   - provider: Webhook
     url: https://app.signpath.io/API/v1/b97db90c-7c03-416b-9003-8ed45742da5f/Integrations/AppVeyor?ProjectKey=mbdavid-LiteDB&SigningPolicyKey=test-signing
