--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,19 @@ for:
   matrix:
     only:
       - configuration: Release
-#  after_build:
-#    - ps: Compress-Archive -Path "LiteDB\bin\Release\net45\LiteDB.dll", "LiteDB.Shell\bin\Release\netcoreapp2.1\LiteDB.Shell.dll" -CompressionLevel "Optimal" -DestinationPath "release-${env:APPVEYOR_BUILD_VERSION}.zip"
   artifacts:
-#    - path: release-*.zip
     - path: LiteDB\bin\Release\net45\LiteDB.dll
+  deploy:
+  - provider: Webhook
+    url: https://app.signpath.io/API/v1/b97db90c-7c03-416b-9003-8ed45742da5f/Integrations/AppVeyor?ProjectKey=mbdavid-LiteDB&SigningPolicyKey=release-signing
+    authorization:
+      secure: 5Xj6LCgkuuxTKbNrjQHcGeijmtDAK4fCOwdyD5KOQed2T5tz9rdk5jmw4asn9V6mOi9y0Xi335lK8Ec7spTomA==
+-
+  matrix:
+    only:
+      - configuration: Debug
+    artifacts:
+    - path: LiteDB\bin\Debug\net45\LiteDB.dll
   deploy:
   - provider: Webhook
     url: https://app.signpath.io/API/v1/b97db90c-7c03-416b-9003-8ed45742da5f/Integrations/AppVeyor?ProjectKey=mbdavid-LiteDB&SigningPolicyKey=test-signing
